projects overflow fix

--- a/src/features/Filter/Filter.scss
+++ b/src/features/Filter/Filter.scss
@@ -21,6 +21,7 @@
   flex-basis: auto;
   flex-grow: 1;
   text-align: center;
+  user-select: none;
 }
 
 .filter__h2 {
